--- a/frontend/templates/resumen_asistencias_diarias.html
+++ b/frontend/templates/resumen_asistencias_diarias.html
@@ -115,4 +115,16 @@
 
 {% block scripts %}
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-qQ2iX+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+{% if request.GET.aprobado %}
+<script>
+    Swal.fire({
+        icon: 'success',
+        title: '¡Horas extra aprobadas!',
+        text: 'Las horas extra han sido aprobadas correctamente.',
+        confirmButtonColor: '#3085d6',
+        confirmButtonText: 'OK'
+    });
+</script>
+{% endif %}
 {% endblock %}
