--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,21 +1,22 @@
 {% extends "layout/base.html" %}
 
+{% load widget_tweaks %}
 {% block content %}
 <div class="container mt-5">
   <div class="row justify-content-center">
-    <div class="col-md-6">
+    <div class="col-md-6 col-lg-4">
       <div class="card shadow">
         <div class="card-header text-center">
           <h4>Iniciar sesión</h4>
         </div>
         <div class="card-body">
-          <form method="post" novalidate>
+          <form method="post" novalidate class="text-center">
             {% csrf_token %}
 
             {% for field in form %}
-              <div class="mb-3">
+              <div class="mb-3 text-start">
                 <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
-                {{ field }}
+                {{ field|add_class:"form-control text-center" }}
                 {% if field.errors %}
                   <div class="text-danger small">
                     {{ field.errors|striptags }}
@@ -35,6 +36,6 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> 
 </div>
 {% endblock %}
