--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -84,7 +84,7 @@
       {% if user.rol == 'admin' or user.rol == 'rrhh' %}
         <li class="nav-item">
           <a class="nav-link text-white d-flex align-items-center" href="{% url 'lista_usuarios' %}">
-            <i class="bi bi-people me-2"></i><span class="sidebar-text">Gestión Usuarios</span>
+            <i class="bi bi-people me-2"></i><span class="sidebar-text">Gestion Empleados</span>
           </a>
         </li>
       {% endif %}
