--- a/frontend/templates/usuarios.html
+++ b/frontend/templates/usuarios.html
@@ -11,7 +11,7 @@
   <!-- Botón para abrir el modal de creación -->
   {% if request.user.rol == 'admin' or request.user.rol == 'rrhh' %}
     <button type="button" class="btn btn-primary mb-3" data-bs-toggle="modal" data-bs-target="#modalCrearUsuario">
-      Crear nuevo usuario
+      Crear nuevo empleado
     </button>
   {% endif %}
 
